<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.oguzh.libook.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anaekran"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/et_kullaniciadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="225dp"
        android:hint="Kullanıcı Adı"
        android:inputType="text"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@color/colorAccent" />

    <EditText
        android:id="@+id/et_parola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="Parola"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@color/colorAccent" />

    <Button
        android:id="@+id/btn_Giris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_enter"
        android:text="Giriş"
        android:textColor="@android:color/background_light"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="100dp"
    android:layout_marginRight="100dp"
    android:layout_marginTop="5dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kaydol"
        android:textColor="@android:color/background_light"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_kayitol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/kaydol1"
        android:textColor="@android:color/background_light"
        android:textSize="15sp" />


</LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="145dp"
        android:gravity="center"
        android:text="@string/girisaltyazi"
        android:textColor="@android:color/white"
        android:textSize="10sp" />

</LinearLayout>
